Ensure that the generated script is in fact executable. Seems that a round trip through packaging removed the executable flags.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,7 @@ Changelog
 1.0a2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Ensure that the generated script is executable.
 
 
 1.0a1 (2009-11-26)
